--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             const loader = document.querySelector('.loader');
             const container = document.getElementById('actas-container');
 
-            const apiUrl = 'https://legaltech-n8n.vga0cw.easypanel.host/webhook/repositorios';
+            const apiUrl = 'https://intelety-n8n.uryun4.easypanel.host/webhook/repositorios';
             const baseRedirectUrl = 'https://kevin0naranjo.github.io/actas_reuniones/';
 
             const fetchActas = async () => {
@@ -247,4 +247,5 @@
     </script>
 
 </body>
+
 </html>
